--- a/src/index.html
+++ b/src/index.html
@@ -4,10 +4,16 @@
   <meta charset="utf-8">
   <title>Dashboard</title>
   <base href="/">
+
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
+  
+  <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons"><link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 <body>
+  
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script> 
+
   <app-root></app-root>
 </body>
 </html>
